TppSystem/bin/Debug/C7XX_GCS_DLL.h

int C7XX_FUNC_DECL C7XX_ConnectTCPIP(const char* szHostname, int port);
BOOL C7XX_FUNC_DECL C7XX_IsConnected(int ID);
void C7XX_FUNC_DECL C7XX_CloseConnection(int ID);
BOOL C7XX_FUNC_DECL C7XX_SVO(int ID, const char* szAxes, const BOOL* pbValarray);
BOOL C7XX_FUNC_DECL C7XX_qSVO(int ID, const char* szAxes, BOOL* pbValarray);
BOOL C7XX_FUNC_DECL C7XX_IsReferenceOK(int ID, const char* szAxes, BOOL* pbValarray);
BOOL C7XX_FUNC_DECL C7XX_INI(int ID, const char* szAxes);
BOOL C7XX_FUNC_DECL C7XX_MOV(int ID, const char* szAxes, const double* pdValarray);
BOOL C7XX_FUNC_DECL C7XX_qMOV(int ID, const char* szAxes, double* pdValarray);
BOOL C7XX_FUNC_DECL C7XX_MVR(int ID, const char* szAxes, const double* pdValarray);
BOOL C7XX_FUNC_DECL C7XX_qPOS(int ID, const char* szAxes, double* pdValarray);
BOOL C7XX_FUNC_DECL C7XX_VEL(int ID, const char* szAxes, const double* pdValarray);
BOOL C7XX_FUNC_DECL C7XX_qVEL(int ID, const char* szAxes, double* pdValarray);
BOOL C7XX_FUNC_DECL C7XX_GcsCommandset(int ID, const char* szCommand);