TppSystem/bin/Debug/E7XX_GCS_DLL.h

int		E7XX_FUNC_DECL	E7XX_ConnectNIgpib(int iBoardNumber, int iDeviceAddress);
BOOL	E7XX_FUNC_DECL	E7XX_IsConnected(int ID);
void	E7XX_FUNC_DECL	E7XX_CloseConnection(int ID);
BOOL E7XX_FUNC_DECL E7XX_INI(int ID, const char* szAxes);
BOOL E7XX_FUNC_DECL E7XX_MOV(int ID, const char* szAxes, const double* pdValueArray);
BOOL E7XX_FUNC_DECL E7XX_qMOV(int ID, const char* szAxes, double* pdValueArray);
BOOL E7XX_FUNC_DECL E7XX_MVR(int ID, const char* szAxes, const double* pdValueArray);
BOOL E7XX_FUNC_DECL E7XX_qPOS(int ID, const char* szAxes, double* pdValueArray);
BOOL E7XX_FUNC_DECL E7XX_SVO(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL E7XX_FUNC_DECL E7XX_qSVO(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL E7XX_FUNC_DECL E7XX_VEL(int ID, const char* szAxes, const double* pdValueArray);
BOOL E7XX_FUNC_DECL E7XX_qVEL(int ID, const char* szAxes, double* pdValueArray);